tdf#88051 fix Graphite layout at Linux Libertine G ligature followed by tab

Change-Id: Iecedb87f6329c1cddcaa4cd939b349924e58d256